Closed Bug 590775 Opened 14 years ago Closed 14 years ago

Assertion with Reflect.parse("default xml namespace=x")

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: dherman)

References

Details

(Keywords: assertion, testcase, Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Reflect.parse("default xml namespace=x")   

Assertion failure: pn->pn_arity == PN_UNARY && ((js::TokenKind)(pn->pn_u.unary.kid)->pn_type) == TOK_STRING, at ../jsreflect.cpp:1764
Blocks: 590820
Fix attached.

Dave
Assignee: general → dherman
Attachment #469848 - Flags: review?(cdleary)
Comment on attachment 469848 [details] [diff] [review]
default xml namespace takes an expression, not just a string literal

Straightforward.
Attachment #469848 - Flags: review?(cdleary) → review+
http://hg.mozilla.org/tracemonkey/rev/690aca5702db
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/690aca5702db
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
E4X has been removed, so we won't add the test.
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: