bug 590775, r=cdleary: default xml namespace = <<expr>>